feat: ex 2 - dom

--- a/DOM/index.html
+++ b/DOM/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
@@ -9,13 +9,13 @@
     <p id="meu-paragrafo">Este é o texto original do parágrafo.</p>
     <button id="meu-botao">Clique para alterar o texto</button>
 
-    <script src="dom.js"></script>
+    <script src="dom ex 1.js"></script>
 </body>
-</html>
+</html> -->
 
 
 
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
@@ -32,9 +32,9 @@
     <button id="adicionar">Adicionar Item</button>
     <button id="remover">Remover Último Item</button>
 
-    <script src="dom.js"></script>
+    <script src="dom ex 2.js"></script>
 </body>
-</html> -->
+</html>
 
 
 <!-- <!DOCTYPE html>
