feat: ex 3 - dom

--- a/DOM/index.html
+++ b/DOM/index.html
@@ -15,7 +15,7 @@
 
 
 
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
@@ -34,10 +34,9 @@
 
     <script src="dom ex 2.js"></script>
 </body>
-</html>
+</html> -->
 
-
-<!-- <!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
@@ -50,6 +49,6 @@
     <button id="mostrar-localizacao">Mostrar Localização</button>
     <p id="localizacao"></p>
 
-    <script src="dom.js"></script>
+    <script src="dom ex 3.js"></script>
 </body>
-</html> -->
+</html> 
