feat: ex funcoes

--- a/funcoes/index.html
+++ b/funcoes/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <!-- <script src="exemploFuncoes.js"></script> -->
-    <script src="exercicioFuncoes.js"></script>
+    <script src="ex funcoes.js"></script>
 </body>
 </html>
